# differential-dataflow

./: .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  Cargo.toml  README.md  SPIKE.md  TODO.md  corgi-kernel-findings-scc.md  index.html  int-proxy-columnar-findings.md  introduction.html  kpg-reviews.md  print.html  release-plz.toml  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-200217ab.js  searchindex-30e5e959.js  searchindex-3d84dc1d.js  searchindex-43cd3ffd.js  searchindex-6114454b.js  searchindex-655c864e.js  searchindex-692c037e.js  searchindex-72ba1084.js  searchindex-7d71203f.js  searchindex-7efa1ce8.js  searchindex-9fb0d78b.js  searchindex-a246d49f.js  searchindex-ac7f3aaa.js  searchindex-cfbc6882.js  searchindex-e8c4c270.js  searchindex-f1f87949.js  searchindex.js  searchindex.json  sigmod2019-reviews.md  sosp2019-reviews.md  toc-03e09f86.js  toc-70bd4b90.js  toc.html  (+1 more)
containers/: Cargo.toml
containers/examples/: columnar.rs  spines.rs
containers/src/: columnation.rs  huffman_container.rs  lib.rs  rhh.rs
containers/src/columnation/: chunker.rs  merge_batcher.rs
ddir/: Cargo.toml
ddir/examples/: ddir_col.rs  ddir_vec.rs
ddir/examples/programs/: stable.ddp
ddir/src/: ir.rs  lower.rs
ddir/src/parse/: pipe.rs
diagnostics/: Cargo.toml  README.md  index.html
diagnostics/console/: README.md  index.html  package-lock.json  package.json
diagnostics/console/src/: App.tsx  collections.ts  derive.ts  main.tsx  styles.css  ws.ts
diagnostics/examples/: scc-bench.rs  smoke.rs
diagnostics/src/: lib.rs  logging.rs  server.rs
differential-dataflow/: CHANGELOG.md  Cargo.toml
differential-dataflow/benches/: chunk_bench.rs
differential-dataflow/examples/: accumulate.rs  arrange.rs  bfs.rs  chunk_bench.rs  chunks.rs  col-spines.rs  columnar.rs  columnar_spill.rs  compact.rs  containers.rs  cursors.rs  ddir.rs  ddir_ast.rs  ddir_columnar.rs  ddir_syntax.rs  degrees.rs  dynamic.rs  enter_at_test.rs  eqsat.rs  event_driven.rs  freeze.rs  graspan.rs  hello.rs  int_proxy_bench.rs  interpreted.rs  itembased_cf.rs  iterate_container.rs  monoid-bfs.rs  multitemporal.rs  pagerank.rs  progress.rs  projekt.rs  reduce_bench.rs  scc.rs  scc_compare.rs  scc_proxy.rs  spines.rs  stackoverflow.rs
differential-dataflow/examples/columnar/: columnar_support.rs  main.rs
differential-dataflow/examples/programs/: reach.ddir  scc.ddir  scc.ddp  stable.ddir  stable.ddp
differential-dataflow/src/: capture.rs  collection.rs  consolidation.rs  containers.rs  difference.rs  input.rs  into_owned.rs  lattice.rs  lib.rs  logging.rs
differential-dataflow/src/algorithms/: identifiers.rs  prefix_sum.rs
differential-dataflow/src/columnar/: batcher.rs  builder.rs  chunker.rs  exchange.rs  layout.rs  mod.rs  spill.rs  trie_merger.rs  updates.rs
differential-dataflow/src/dynamic/: mod.rs  pointstamp.rs
differential-dataflow/src/operators/: common.rs  consolidate.rs  count.rs  enter.rs  iterate.rs  join.rs  mod.rs  negate.rs  reduce.rs  threshold.rs
differential-dataflow/src/trace/: chunk.rs  mod.rs
differential-dataflow/tests/: bfs.rs  import.rs  int_proxy.rs  int_proxy_bytes.rs  int_proxy_graphs.rs  int_proxy_pending.rs  join.rs  prop_at.rs  reduce.rs  reduce_audit.rs  reduce_reference.rs  scc.rs  sharing.rs  sim_scc.rs  trace.rs
differential-dataflow/tests/common/: mod.rs
differential-dataflow/tests/support/: identity_chunk.rs  mod.rs  vec_backend.rs
dogsdogsdogs/: CHANGELOG.md  Cargo.toml  README.md
dogsdogsdogs/examples/: delta_query.rs  delta_query2.rs  delta_query_wcoj.rs  dogsdogsdogs.rs  ngo.rs
dogsdogsdogs/src/: altneu.rs  calculus.rs  lexicographic.rs  lib.rs
dogsdogsdogs/src/operators/: count.rs  half_join.rs  half_join2.rs  lookup_map.rs  mod.rs  propose.rs  validate.rs
dogsdogsdogs/tests/: lookup_map_regression.rs
experiments/: .gitignore  Cargo.toml  arrange  arrange.py  experiments-hotdog.txt  experiments-sf10-filtered.txt  experiments.py  graphs_interactive.py  hardware.md  hostfile.txt  plot_arrange_open_loop.sh  plot_arrange_throughput.py  plot_graphs_interactive.py  plot_graphs_interactive_alt.sh  plot_graphs_interactive_neu.sh  plot_microbench.py  plot_one_graphs_interactive_neu.sh  plot_tpch.sh  plot_tpchlike.sh  plot_tpchlike_ccdf.sh  plot_tpchlike_hist.sh  plot_tpchlike_rss.sh  requirements.txt  tpch.py
hector/: Cargo.toml  README.md  old.txt
hector/examples/: dogsdogsdogs.rs
hector/src/: lexicographic.rs  lib.rs  stage.rs
interactive/: Cargo.toml  README.md
interactive/examples/: corgi_arrange_smoke.rs  corgi_ast_compute.rs  corgi_ast_prof.rs  corgi_backend_linear.rs  corgi_bench.rs  corgi_bwd_min.rs  corgi_cc_min.rs  corgi_chain.rs  corgi_compound_prof.rs  corgi_fold.rs  corgi_ident_big.rs  corgi_ident_prof.rs  corgi_join_dataflow.rs  corgi_join_mechanism.rs  corgi_linear_dataflow.rs  corgi_perf.rs  corgi_prof.rs  corgi_program.rs  corgi_progs.rs  corgi_reach.rs  corgi_reduce.rs  corgi_reduce_dataflow.rs  corgi_reduce_trace.rs  corgi_scc_big.rs  corgi_scc_compound.rs  corgi_scc_min.rs  corgi_scc_prof.rs  corgi_scc_stream.rs  corgi_scc_trace.rs  corgi_scorecard.rs  corgi_smoke.rs  ddir_bench.rs  ddir_col.rs  ddir_col.rs.disabled  ddir_server.rs  ddir_vec.rs  dump_explain.rs  native_scc_prof.rs  vec_scc_prof.rs
interactive/examples/programs/: adt.ddp  ast.ddp  binders.ddp  congruence.ddp  cse_tree.ddp  (+17 more)
interactive/src/: col_times.rs  command.rs  concrete.rs  corgi_arrange.rs  corgi_backend.rs  corgi_chunk.rs  corgi_join.rs  corgi_reduce.rs  corgi_reduce_backend.rs  explain.rs  explain_tree.rs  expression.rs  folded.rs  ir.rs  lib.rs  logging.rs  lower.rs  manager.rs  opt.rs  scope_builder.rs  scope_ir.rs  server.rs
interactive/tests/: corgi_backend.rs  explain.rs
server/: Cargo.toml  README.md
server/src/: lib.rs
timely_master/: Cargo.toml  README.md
timely_master/differential-dataflow/: Cargo.toml
timely_master/differential-dogs3/: Cargo.toml
timely_master/src/: lib.rs
tpchlike/: Cargo.toml  README.md
tpchlike/examples/: tpch15.rs  tpch17.rs
tpchlike/src/: lib.rs  main.rs  types.rs
(+1938 files in other folders)
