[workspace]
members = [
    "differential-dataflow",
    # "advent_of_code_2017",
    "dogsdogsdogs",
    "experiments",
    "interactive",
    "server",
    "server/dataflows/degr_dist",
    "server/dataflows/neighborhood",
    "server/dataflows/random_graph",
    "server/dataflows/reachability",
    #"tpchlike",
    "doop"
]
resolver = "2"

[workspace.dependencies]
differential-dataflow = { path = "differential-dataflow", default-features = false, version = "0.16.2" }
#timely = { version = "0.23", default-features = false }
columnar = { version = "0.10", default-features = false }
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow", default-features = false }

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 4
