[package]
name = "diagnostics"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[dependencies]
differential-dataflow.workspace = true
timely = { workspace = true, features = ["getopts"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.26"
