[package]

name = "differential-dataflow"
version = "0.13.6"
authors = ["Frank McSherry <fmcsherry@me.com>"]

description = "An incremental data-parallel dataflow platform"

# These URLs point to more information about the repository
documentation = "https://docs.rs/differential-dataflow"
homepage = "https://github.com/TimelyDataflow/differential-dataflow"
repository = "https://github.com/TimelyDataflow/differential-dataflow.git"
keywords = ["differential", "dataflow"]
license = "MIT"
readme = "README.md"
edition="2021"

[dev-dependencies]
bincode = "1.3.1"
indexmap = "2.1"
rand="0.4"
byteorder="1"
itertools="^0.13"
serde_json = "1.0"
graph_map = "0.1"
bytemuck = "1.18.0"

[dependencies]
columnar = "0.3"
columnation = "0.1.0"
fnv="1.0.2"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
timely = {workspace = true}

[features]
default = ["timely/getopts"]
