[package]
name = "differential-dogs3"
version = "0.19.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]
license = "MIT"
edition = "2021"
description = "Advanced join patterns in differential dataflow"

documentation = "https://docs.rs/differential-dogs3"
homepage = "https://github.com/TimelyDataflow/differential-dataflow"
repository = "https://github.com/TimelyDataflow/differential-dataflow.git"

[dependencies]
timely = { workspace = true }
differential-dataflow = { workspace = true }
serde = { version = "1.0", features = ["derive"]}

[dev-dependencies]
graph_map = "0.1"

[features]
default = ["timely/getopts"]
