[package]
name = "differential-dogs3"
version = "0.20.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]
license = "MIT"
edition.workspace = true
description = "Advanced join patterns in differential dataflow"

documentation = "https://docs.rs/differential-dogs3"
homepage = "https://github.com/TimelyDataflow/differential-dataflow"
repository = "https://github.com/TimelyDataflow/differential-dataflow.git"

[dependencies]
timely = { workspace = true }
differential-dataflow = { workspace = true }
serde = { version = "1.0", features = ["derive"]}

[dev-dependencies]
graph_map = "0.1"

[features]
default = ["timely/getopts"]
