[package]
name = "differential-dogs3"
version = "0.21.1"
authors = ["Frank McSherry <fmcsherry@me.com>"]
license = "MIT"
edition.workspace = true
rust-version.workspace = true
description = "Advanced join patterns in differential dataflow"

documentation = "https://docs.rs/differential-dogs3"
homepage = "https://github.com/TimelyDataflow/differential-dataflow"
repository = "https://github.com/TimelyDataflow/differential-dataflow.git"

[lints]
workspace = true

[dependencies]
timely = { workspace = true }
differential-dataflow = { workspace = true }
serde = { version = "1.0", features = ["derive"]}

[dev-dependencies]
graph_map = "0.1"

[features]
default = ["timely/getopts"]
