[package]
name = "experiments"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]
edition = "2021"

[dependencies]
core_affinity = "0.5.9"
rand="0.3.13"
abomonation = "0.7"
abomonation_derive = "0.5"
#timely = "0.7"
timely = { workspace = true }
differential-dataflow = { path = "../" }
graph_map = { git = "https://github.com/frankmcsherry/graph-map" }
serde = { version = "1.0.190", features = ["derive"] }
