[package]
name = "experiments"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]
edition = "2021"
publish = false

[dependencies]
core_affinity = "0.5.9"
rand="0.3.13"
timely = { workspace = true }
differential-dataflow = { path = "../differential-dataflow" }
graph_map = { git = "https://github.com/frankmcsherry/graph-map" }
serde = { version = "1.0", features = ["derive"] }
