[package]
name = "interactive"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]
license = "MIT"
edition.workspace = true
rust-version.workspace = true
description = "DD IR: an interpreted intermediate representation for differential dataflow"
publish = false

[lints]
workspace = true

[dependencies]
columnar = { workspace = true }
corgi = { path = "../../wip/corgi" }
differential-dataflow = { workspace = true }
mimalloc = "0.1.48"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.15.1"
timely = { workspace = true }

[dev-dependencies]
diagnostics = { path = "../diagnostics" }

[features]
default = ["timely/getopts"]
