[package]
name = "interactive"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]
license = "MIT"
edition.workspace = true
rust-version.workspace = true
description = "DD IR: an interpreted intermediate representation for differential dataflow"
publish = false

[lints]
workspace = true

[dependencies]
columnar = { workspace = true }
# Local dev: `path = "../../wip/corgi"`. Pinned to a git rev so the branch builds standalone
# (frankmcsherry/wip @ dd-arrange-api) — see int-proxy-columnar-findings.md.
corgi = { git = "https://github.com/frankmcsherry/wip", rev = "1301b281501d5e70ab63f9405412770a3250d985" }
differential-dataflow = { workspace = true }
mimalloc = "0.1.48"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.15.1"
timely = { workspace = true }

[dev-dependencies]
diagnostics = { path = "../diagnostics" }

[features]
default = ["timely/getopts"]
