# This is not part of the regular workspace.
[workspace]
members = ["differential-dataflow", "differential-dogs3"]
resolver = "2"

[workspace.dependencies]
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow", default-features = false }

[patch.crates-io]
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow" }
