[package]
name = "tpchlike"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]

[dependencies.timely]
git="https://github.com/frankmcsherry/timely-dataflow/"

[dependencies.differential-dataflow]
git="https://github.com/frankmcsherry/differential-dataflow"

[dependencies.arrayvec]
git="https://github.com/bluss/arrayvec"

[dependencies]
abomonation="0.4.5"
