[package]
name = "tpchlike"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]

[dependencies]
regex = "0.2"
timely = { git = "https://github.com/frankmcsherry/timely-dataflow" }
differential-dataflow = { path = "../" }
arrayvec = { git = "https://github.com/bluss/arrayvec" }
abomonation = { git = "https://github.com/frankmcsherry/abomonation" }
core_affinity = "0.5.9"

[profile.release]
panic = "abort"

