[package]
name = "tpchlike"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]

[dependencies]
rand = "0.6.5"
regex = "0.2"
timely = "0.9"
#timely = { git = "https://github.com/TimelyDataflow/timely-dataflow" }
differential-dataflow = { path = "../" }
arrayvec = { git = "https://github.com/bluss/arrayvec" }
abomonation = "0.7"
core_affinity = "0.5.9"
jemallocator = { version = "0.3.0", optional = true }

[features]
default = []
jemalloc = ["jemallocator"]

[profile.release]
panic = "abort"

