[package]
name = "differential-dataflow"
version = "0.0.0"
authors = ["Moritz Hoffmann <antiguru@gmail.com>"]
license = "MIT"
edition = "2021"
publish = false
description = "A fake package to test differential against timely master."

# Point at the regular differential crate.
[lib]
path = "../../src/lib.rs"

# Dependencies to build against timely master. Must mirror the dependencies in the main Cargo.toml.
[dependencies]
fnv="1.0.2"
serde = { version = "1.0", features = ["derive"] }
timely = { workspace = true }

[features]
default = ["timely/getopts"]
