[package]
name = "differential-dogs3"
version = "0.0.0"
authors = ["Moritz Hoffmann <antiguru@gmail.com>"]
license = "MIT"
edition = "2021"
publish = false
description = "A fake package to test dogsdogsdogs against timely master."

# Point at the regular dogsdogsdogs crate.
[lib]
path = "../../dogsdogsdogs/src/lib.rs"

# Dependencies to build against timely master. Must mirror the dependencies in the main Cargo.toml.
[dependencies]
differential-dataflow = { path = "../differential-dataflow", default-features = false }
serde = { version = "1.0", features = ["derive"] }
timely = { workspace = true }
