[package]
name = "random_graph"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]

[dependencies]
timely = { git = "https://github.com/frankmcsherry/timely-dataflow" }
differential-dataflow = { path = "../../../" }
dd_server = { path = "../../" }
rand="0.3.13"

streaming-harness-hdrhist = { git = "https://github.com/utaal/hdrhist-rust" }

[lib]
crate-type = ["dylib"]