[package]
name = "random_graph"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]
edition.workspace = true
publish = false

[dependencies]
timely = {workspace = true}
differential-dataflow = { workspace = true }
dd_server = { path = "../../" }
rand="0.3.13"

hdrhist = { git = "https://github.com/utaal/hdrhist" }

[lib]
crate-type = ["dylib"]
